k8s/base/core-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  labels:
    app: core-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: core-service

  template:
    metadata:
      labels:
        app: core-service
    spec:
      containers:
        - name: core-service
          image: danyafi/core-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002

          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      restartPolicy: Always
