k8s/base/core-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
