k8s/base/core-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: core-micr.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8001
